--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+async-channel = "2.5.0"
 http = "1.3.1"
 itoa = "1.0.15"
 mime_guess = "2.0.5"
