--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 async-channel = "2.5.0"
+const-hex = "1.15.0"
 http = "1.3.1"
 itoa = "1.0.15"
 mime_guess = "2.0.5"
