--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2024"
 [dependencies]
 async-channel = "2.5.0"
 const-hex = "1.15.0"
-http = "1.3.1"
+httparse = "1.10.1"
 itoa = "1.0.15"
 mime_guess = "2.0.5"
 monoio = "0.2.4"
