--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,10 @@ lzma = ["rc-zip/lzma"]
 
 [dev-dependencies]
 criterion = "0.5"
+assert_cmd = "2.0"
+regex = "1.11"
+flate2 = "1.1.5"
+ureq = { version = "3.1.4", features = ["gzip"] }
 
 [[bench]]
 name = "http_server"
