--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ percent-encoding = "2.3.1"
 rc-zip = { version = "5.3.1", features = ["deflate"] }
 tracing = { version = "0.1.44", features = ["release_max_level_info"] }
 tracing-subscriber = { version = "0.3.19", features = ["std", "fmt", "ansi"], default-features = false }
+v_htmlescape = "0.15.8"
 winnow = "0.5.36"
 
 [features]
