chore(deps): updates

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,11 +10,18 @@ const_format = "0.2.35"
 httparse = "1.10.1"
 itoa = "1.0.15"
 mime_guess = { version = "2.0.5", default-features = false }
-monoio = { version = "0.2.4", features = ["iouring", "tracing"], default-features = false }
+monoio = { version = "0.2.4", features = [
+    "iouring",
+    "tracing",
+], default-features = false }
 percent-encoding = "2.3.1"
 rc-zip = { version = "5.4.1", features = ["deflate"] }
 tracing = { version = "0.1.44", features = ["release_max_level_info"] }
-tracing-subscriber = { version = "0.3.19", features = ["std", "fmt", "ansi"], default-features = false }
+tracing-subscriber = { version = "0.3.19", features = [
+    "std",
+    "fmt",
+    "ansi",
+], default-features = false }
 v_htmlescape = "0.15.8"
 winnow = "0.5.36"
 
@@ -27,11 +34,13 @@ bzip2 = ["rc-zip/bzip2"]
 lzma = ["rc-zip/lzma"]
 
 [dev-dependencies]
-criterion = "0.5"
+criterion = "0.8"
 assert_cmd = "2.0"
 regex = "1.11"
 flate2 = "1.1.8"
-ureq = { version = "3.1.4", features = ["gzip"] }
+ureq = { version = "=3.1.4", features = [
+    "gzip",
+] } # 3.2.0 transparently removes encoding headers so we can't tell whether the response was compressed
 
 [[bench]]
 name = "http_server"
