port benchmarks to divan
this crate is now serde-free

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,7 @@ bzip2 = ["rc-zip/bzip2"]
 lzma = ["rc-zip/lzma"]
 
 [dev-dependencies]
-criterion = "0.8"
+divan = "0.1.21"
 assert_cmd = "2.0"
 regex = "1.11"
 flate2 = "1.1.8"
